# ChangeLog for app-misc/cl-tools-meta
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cl-tools-meta-11.0-r7 (06 Feb 2011)

  06 Feb 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cl-tools-meta-11.0-r6.ebuild, +cl-tools-meta-11.0-r7.ebuild:
  Add sys-power/powertop in desktops and CMC

*cl-tools-meta-11.0-r6 (31 Jan 2011)

  31 Jan 2011; Alexander Tratsevskiy (L'autre)
  <at@calculate.ru> -cl-tools-meta-11.0-r5.ebuild,
  +cl-tools-meta-11.0-r6.ebuild:
  Added iotop

*cl-tools-meta-11.0-r5 (31 Jan 2011)

  31 Jan 2011; Alexander Tratsevskiy (L'autre)
  <at@calculate.ru> -cl-tools-meta-11.0-r4.ebuild,
  +cl-tools-meta-11.0-r5.ebuild:
  Added sys-apps/xinetd

*cl-tools-meta-11.0-r4 (17 Jan 2011)

  17 Jan 2011; Alexander Tratsevskiy (L'autre)
  <atratsevskiy@gentoo.org> -cl-tools-meta-11.0-r3.ebuild,
  +cl-tools-meta-11.0-r4.ebuild:
  Added sys-apps/gdisk

  07 Jan 2011; Alexander Tratsevskiy (L'autre)
  cl-tools-meta-11.0-r3.ebuild:
  Added app-misc/screen for CMC

*cl-tools-meta-11.0-r3 (30 Nov 2010)

  30 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-tools-meta-11.0-r2.ebuild, +cl-tools-meta-11.0-r3.ebuild:
  Added DHCP for CLS

*cl-tools-meta-11.0-r2 (25 Nov 2010)

  25 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-tools-meta-11.0-r1.ebuild, +cl-tools-meta-11.0-r2.ebuild:
  Renamed USE flag to CDISTRO.

*cl-tools-meta-11.0 (17 Nov 2010)

  17 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cl-tools-meta-11.0.ebuild:
  New meta-package for Calculate Linux.
