@@ -1,3 +1,2 @@
-EBUILD cl-tools-meta-11.0-r6.ebuild 2949 RMD160 2cf31a05ec0a34431e521be27815a1e120782cf4 SHA1 cbc4604505c2a5b75e6b3149cf280615e82ef059 SHA256 6369fae1de4bbf663d00b92a3565374701e474b14e58001efbca58b14816da0d
-EBUILD cl-tools-meta-11.0-r7.ebuild 2949 RMD160 2cf31a05ec0a34431e521be27815a1e120782cf4 SHA1 cbc4604505c2a5b75e6b3149cf280615e82ef059 SHA256 6369fae1de4bbf663d00b92a3565374701e474b14e58001efbca58b14816da0d
-MISC ChangeLog 1585 RMD160 cb1f86621783802b4ff9ec5c1447b67cd1ee776d SHA1 8398482cf3710a654c14849a78013370ffdacd6d SHA256 e8c526c4bac1893c66e7aeb771610c53a45c9351f742d4fa2bfbbb5e03d809a6
+EBUILD cl-tools-meta-11.0-r8.ebuild 2949 RMD160 491beb772586cb7601aa89fcad60f21f10629fa7 SHA1 93c64089a73cab1d60cae614127826b81190103c SHA256 84d21334f7115a638d789e6ffb5b60008a890dce5543f5ba4f10090c50e61aa8
+MISC ChangeLog 1809 RMD160 54dfa6f5d43ee245ab4d0f668326c3429b34b746 SHA1 83fb76fa7132f9a3932b2942629e012739bbd38a SHA256 0658259c9fa6ee076279c44e2b315c787e67a8120b599be8b9fef2a7883656f9
