@@ -2,6 +2,13 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-tools-meta-11.0-r8 (10 Feb 2011)
+
+  10 Feb 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  -cl-tools-meta-11.0-r6.ebuild, -cl-tools-meta-11.0-r7.ebuild,
+  +cl-tools-meta-11.0-r8.ebuild:
+  Add sys-apps/ethtool
+
 *cl-tools-meta-11.0-r7 (06 Feb 2011)
 
   06 Feb 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
